# semds

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKER_QUICK_FIX.md  ENV_SETUP_GUIDE.md  EXPERIMENTS_EXECUTION_REPORT.md  EXPERIMENT_REPORT_2026-03-14.md  EXPERIMENT_ROADMAP.md  HYBRID_LLM_GUIDE.md  INTEGRATION_COMPLETION_REPORT.md  META_EVOLUTION.md  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE3_FINAL_DELIVERY.md  PHASE3_REVIEW_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPREHENSIVE_REVIEW_REPORT.md  PHASE5_T11_T13_REVIEW_REPORT.md  PHASE5_T14_T17_REVIEW_REPORT.md  PHASE5_T9_T10_REVIEW_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  SELF_EVOLUTION_ROADMAP.md  SEMDS_v1.1_SPEC.md  START_MATRIX_CHALLENGE.md  check_tasks.py  demo_lang_quick.py  demo_language_dev.py  demo_meta_evolution.py  demo_phase1.py  demo_phase2.py  demo_phase3_evolution.py  docker-compose.yml  docker_fix_report.md  fix_and_start.py  launch_semds.py  monitor_matrix.py  (+14 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
api/: dependencies.py  evolution_runner.py  main.py  middleware.py  schemas.py  state.py  state_migration.py  state_redis.py
api/auth/: __init__.py  decorators.py  dependencies.py  jwt.py  models.py  permissions.py
api/routers/: approvals.py  auth.py  evolution.py  monitor.py  tasks.py
core/: docker_manager.py  env_loader.py  git_manager.py  kernel.py
docker/: Dockerfile  Dockerfile.sandbox
docs/: EXTRINSIC_EVALUATOR_MIGRATION.md  IMPROVEMENT_PROPOSAL.md  INTEGRATION_LOG.md  MOTHER_SYSTEM_DESIGN.md  README.md  USER_GUIDE.md
docs/api/: openapi.yaml
docs/architecture/: c4-model.md
docs/experiments/: PHASE2_EXPERIMENT_REPORT.md
docs/roadmaps/: PHASE1_ROADMAP.md  PHASE2_ROADMAP.md  PHASE3_ADDENDUM.md  PHASE3_ROADMAP.md  PHASE3_TDD_ROADMAP.md  PHASE4_ADDENDUM.md  PHASE4_ROADMAP.md  PHASE4_TDD_ROADMAP.md  PHASE5_ROADMAP.md  PHASE5_TDD_ROADMAP.md  PHASE5_TECH_DEBT.md  ROADMAP_SPEC_ALIGNMENT.md
docs/standards/: ADDENDUM_SUMMARY.md  AI_CODE_REVIEW.md  AI_CONDUCT.md  AI_REVIEW_CHECKLIST.md  AI_WORKFLOW.md  API_DESIGN.md  ARCHITECTURE_GUIDE.md  CHANGELOG.md  CICD_STANDARDS.md  CODE_REVIEW.md  CODE_REVIEW_CHECKLIST.md  CODING_STANDARDS.md  CONFIGURATION.md  DEPENDENCY_MANAGEMENT.md  DESIGN_DECISIONS.md  DOCUMENTATION.md  DOCUMENTATION_GUIDE.md  ERROR_HANDLING.md  EXPERIMENT_PROTOCOL.md  FILE_MANAGEMENT.md  GIT_WORKFLOW.md  PERFORMANCE.md  README.md  SECURITY.md  STANDARDS_ADDENDUM_REPORT.md  STRICT_MODE_GUIDE.md  TDD_MANDATE.md  TESTING_STANDARDS.md
docs/updates/: 2026-03-07-infrastructure-complete.md  2026-03-07-update-report.md
evolution/: code_generator.py  constraints_injector.py  dual_evaluator.py  error_analyzer.py  extrinsic_evaluator.py  goodhart_detector.py  hybrid_llm.py  intrinsic_evaluator.py  meta_learner.py  orchestrator.py  self_validator.py  strategy_optimizer.py  termination_checker.py  test_runner.py
experiments/: EXPERIMENT_REPORT.md  PHASE3_EXPERIMENT_REPORT.md  PHASE3_EXPERIMENT_SUMMARY.md  analyze_test_failures.py  calculator_evolution.py  calculator_evolution_simple.py  consilium_promotion_package.md  consilium_qwen_experiment_design.md  debug_generation.py  debug_test_runner.py  failure_analysis_report.md  hybrid_llm_config.py  integration_full_pipeline.py  integration_meta_db.json  manual_test_analysis.py  meta_learning_db.json  phase1_5_constraints_design.md  phase1_5_constraints_validation.py  phase1_self_validation.py  phase2_error_analysis.py  phase3_calculator_demo.py  phase3_calculator_demo_mock.py  phase3_calculator_demo_real.py  phase3_experiment_report.txt  phase3_experiment_report_real.txt  phase3_final_comprehensive_test.py  phase3_goodhart_validation_final.py  phase3_meta_learning.py  phase3_mock_stress_test.py  phase3_multi_task_evaluation.py  phase3_palindrome_optimization.py  phase3_phase2_enhancement.py  phase3_strategy_comparison.py  real_world_meta_db.json  real_world_task_demo.py  run_comparison_experiment.py  run_mock_evolution.py  run_simple_experiment.py  simple_evolution_demo.py  simple_experiment.py  (+2 more)
experiments/calculator/: task_spec.json
experiments/challenge_3_sorting/: check_status.py  run_challenge.py  solution.py
experiments/challenge_matrix_mul/: run_challenge.py
experiments/results/: A-140637.json  A-140905.json  A-141047.json  A-141316.json  A-141417.json  B-140913.json  B-141055.json  B-141324.json  B-141425.json  calculator_evolution_report.txt  report_20260306_141311.json  report_20260306_141649.json  str_calc_20260314_141621_report.json
factory/: __init__.py  human_gate.py  isolation_manager.py  task_manager.py  task_scheduler.py
monitor/: index.html
mother/: ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  FINAL_SUMMARY.md  PRINCIPLES_SUMMARY.md  ROADMAP_PRODUCTIVITY.md  demo.py  demo_assembly.py  demo_enhanced.py  demo_intent_engine.py  demo_lifecycle.py  demo_llm_tutor.py  demo_principles.py  demo_skills.py  demo_task_decomposer.py  test_principles.py
mother/core/: capability_registry.py  enhanced_mother.py  enhanced_tool_generator.py  fullstack_mother.py  meta_evolution.py  mother_system.py  self_evolving_mother.py  task_analyzer.py  tool_generator.py
mother/experiments/: EXPERIMENT_RESULTS.md  (+1 more)
scripts/: DOCKER_INSTALL_README.md  POST-INSTALL-GUIDE.md  auto-install-docker.ps1  check_docker.ps1  check_project_status.py  complete-uninstall-docker.ps1  find-and-start-docker.ps1  fix-docker-error.ps1  fix-docker.bat  fix_docker.ps1  install-docker-ce.ps1  install-docker-d-drive.ps1  install-docker-hyperv.bat  install-docker-hyperv.ps1  install-docker-stable.ps1  install-docker.bat  install-stable.bat  manual-install-docker.ps1  nuclear-option-docker.ps1  nuclear-option.bat  repair-docker-install.ps1  setup-semds-docker.ps1  use-hyperv-backend.ps1
skills/: skills_library.py
storage/: database.py  models.py
tests/: conftest.py  e2e_frontend_test.py  test_integration_api_evolution.py  test_lifecycle.py  test_meta_evolution.py  test_phase1_acceptance.py
(+115 files in other folders)
