[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semds"
version = "1.1.0"
description = "Self-Evolving Meta-Development System - AI自主代码进化框架"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SEMDS Team"}
]
keywords = ["ai", "code-generation", "evolution", "testing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "typing-extensions>=4.8.0",
    "python-multipart>=0.0.6",
    "websocket-client>=1.6.0",
    
    # Data & Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    
    # Docker & Sandbox
    "docker>=7.0.0",
    
    # AI/LLM
    "anthropic>=0.8.0",
    "openai>=1.0.0",
    
    # Utilities
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    
    # Pre-commit
    "pre-commit>=3.5.0",
    
    # Testing
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[project.scripts]
semds = "semds.cli:main"

[project.urls]
Homepage = "https://github.com/semds/semds"
Documentation = "https://semds.readthedocs.io"
Repository = "https://github.com/semds/semds.git"
Issues = "https://github.com/semds/semds/issues"

# ============================================================================
# Black - 代码格式化
# ============================================================================
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# ============================================================================
# isort - 导入排序
# ============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "__pycache__", "build", "dist", ".venv"]
known_first_party = ["core", "evolution", "storage"]

# ============================================================================
# mypy - 类型检查
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

exclude = [
    "migrations/",
    "tests/",
    ".venv/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "docker",
    "anthropic",
    "pytest",
    "requests",
]
ignore_missing_imports = true

# ============================================================================
# pytest - 测试配置
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=core",
    "--cov=evolution",
    "--cov=storage",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "docker: marks tests that require Docker",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["core", "evolution", "storage"]
branch = true
omit = [
    "*/tests/*",
    "tests/**",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Pylint - 静态分析
# ============================================================================
[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0511",  # Fixme
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-locals = 20

# ============================================================================
# setuptools - 包配置
# ============================================================================
[tool.setuptools]
packages = ["core", "evolution", "storage"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.j2", "*.html"]
